--- a/cv_es.html
+++ b/cv_es.html
@@ -460,7 +460,7 @@
       <br/><div class="cv">
       <div class="year"><h4>2020</h4></div><div class="paper"><h4>&emsp;Condition Numbers for the Cube.<a class="btn btn-arxiv" href="https://arxiv.org/abs/2006.04423" role="button">arXiv:2006.04423</a></h4></div>
       <div class="year"></div><div class="paper"><h4>&emsp;I: Univariate Polynomials and Hypersurfaces</h4></div>
-      <div class="pretalktitle"></div><div class="collaborator">F. Cucker, A.A. Erg&uuml;r and J. Tonelli-Cueto. Plantinga-Vegter Algorithm takes Average Polynomial Time. In <i>Proceedings of the 2020 on International Symposium on Symbolic and Algebraic Computation</i>, ISSAC'20, pages 434-441. ACM, New York, 2020. <span><a href="https://doi.org/10.1145/3373207.3404054">DOI 10.1145/3373207.3404054</a></span> <!--<span><a style="color:#FF69B4;" href="https://dl.acm.org/doi/10.1145/3326229.3326252?cid=99659444592">[Author-Ized LINK]</a></span>--></div>
+      <div class="pretalktitle"></div><div class="collaborator">F. Cucker, A.A. Erg&uuml;r and J. Tonelli-Cueto. Plantinga-Vegter Algorithm takes Average Polynomial Time. In <i>Proceedings of the 2020 on International Symposium on Symbolic and Algebraic Computation</i>, ISSAC'20, pages 434-441. ACM, New York, 2020. <span><a href="https://doi.org/10.1145/3373207.3404054">DOI 10.1145/3373207.3404054</a></span> <span><a style="color:#FF69B4;" href="https://dl.acm.org/doi/10.1145/3373207.3404054?cid=99659444592">[Author-Ized LINK]</a></span></div>
       </div>
 
 
