--- a/cv.html
+++ b/cv.html
@@ -1222,6 +1222,19 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 <!-- 2020
 YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
+<span id="COatWORK"></span>
+<br/><div class="cv">
+<div class="year">
+
+</div><div class="title">
+<h4>&emsp;<a href="http://co-at-work.zib.de/">CO@Work 2020</a></h4></div>
+  <div class="property">Organizer:</div><div class="value">Timo Berthold and Thorsten Koch</div>
+  <div class="property">Hosting Institution:</div><div class="value"><a href="https://www.tu-berlin.de/menue/home/">Technische Universit&auml;t Berlin</a></div>
+  <div class="property"></div><div class="value"><a href="https://www.zib.de/">Zuse Institut Berlin</a></div>
+  <div class="property">Location:</div><div class="value">Berlin, Germany (On-line)</div>
+  <div class="property">Date:</div><div class="value">14th to 25th of September of 2020</div>
+</div>
+
 <span id="ISSAC2020"></span>
 <br/><div class="cv">
 <div class="year">
