--- a/cv_es.html
+++ b/cv_es.html
@@ -1215,11 +1215,24 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
   <div class="property">Institución anfitriona:</div><div class="value"><a href="https://www.uv.es/">Universitat de València</a></div>
   <div class="property"></div><div class="value"><a href="https://www.upv.es/">Universitat Politècnica de València</a></div>
   <div class="property">Lugar:</div><div class="value">Valencia, España (On-line)</div>
-  <div class="property">Fecha:</div><div class="value">1 al 3 de diciembre del 2020</div>
+  <div class="property">Fecha:</div><div class="value">del 1 al 3 de diciembre del 2020</div>
 </div>
 
 <!-- 2020
 YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
+
+<span id="COatWORK"></span>
+<br/><div class="cv">
+<div class="year">
+
+</div><div class="title">
+<h4>&emsp;<a href="http://co-at-work.zib.de/">CO@Work 2020</a></h4></div>
+  <div class="property">Organizador:</div><div class="value">Timo Berthold and Thorsten Koch</div>
+  <div class="property">Institución anfitriona:</div><div class="value"><a href="https://www.tu-berlin.de/menue/home/">Technische Universit&auml;t Berlin</a></div>
+  <div class="property"></div><div class="value"><a href="https://www.zib.de/">Zuse Institut Berlin</a></div>
+  <div class="property">Lugar:</div><div class="value">Berlin, Germany (On-line)</div>
+  <div class="property">Fecha:</div><div class="value">del 14 al 25 de septiembre del 2020</div>
+</div>
 
 <span id="ISSAC2020"></span>
 <br/><div class="cv">
