--- a/aboutme.html
+++ b/aboutme.html
@@ -112,7 +112,7 @@
   </p>
   <h3>Math Genealogy</h3>
   <p>You can research my mathematical academic ancestors and relatives through the Math Genealogy Project.</p>
-  <p style="text-align:center"><a class="btn btn-MGP" href="https://www.genealogy.math.ndsu.nodak.edu/id.php?id=256775" role="button">Math Genealogy Project ID: 256775</a></p>
+  <p style="text-align:center"><a class="btn btn-MGP" href="https://www.genealogy.math.ndsu.nodak.edu/id.php?id=256775" role="button">Math Genealogy Project ID: 256775</a> <a class="btn btn-MGP" href="pdf/mathgenealogy_tonellicueto.pdf" role="button">Poster of my Academic Genealogy</a></p>
 </div>
 
 <footer>
@@ -136,6 +136,9 @@
     <!--
     if (screen.width <= 699) {
     document.getElementById("portrait").style="width:100%;float:center;margin-bottom:1em;margin-top:1em;";
+    x = document.getElementsByClassName("btn btn-MGP");
+    x[0].style="width:100%;";
+    x[1].style="width:100%;";
     document.getElementById("finalsentence").innerHTML="";
     }
     //-->
