--- a/aboutme_es.html
+++ b/aboutme_es.html
@@ -113,7 +113,7 @@
   </p>
   <h3>Genealogía matemática</h3>
   <p>Puedes investigar mes ancestres y familiares matemátiques académiques en el Math Genealogy Project.</p>
-  <p style="text-align:center"><a class="btn btn-MGP" href="https://www.genealogy.math.ndsu.nodak.edu/id.php?id=256775" role="button">Math Genealogy Project ID: 256775</a></p>
+  <p style="text-align:center"><a class="btn btn-MGP" href="https://www.genealogy.math.ndsu.nodak.edu/id.php?id=256775" role="button">Math Genealogy Project ID: 256775</a> <a class="btn btn-MGP" href="pdf/mathgenealogy_tonellicueto.pdf" role="button">Poster de mi genealog&iacute;a acad&eacute;mica</a></p>
 </div>
 
 <footer>
@@ -137,6 +137,9 @@
     <!--
     if (screen.width <= 699) {
     document.getElementById("portrait").style="width:100%;float:center;margin-bottom:1em;margin-top:1em;";
+    x = document.getElementsByClassName("btn btn-MGP");
+    x[0].style="width:100%;";
+    x[1].style="width:100%;";
     document.getElementById("finalsentence").innerHTML="";
     }
     //-->
