--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@
 <p></p>
      <p align="left">
 <b>Institut de Mathematiques de Jussieu - Paris Rive Gauche</b><br/>
-Sorbonne Universite - Campus Pierre et Marie Curie<br/>
+Sorbonne Université - Campus Pierre et Marie Curie<br/>
 Boite Courrier 247<br/>
 4, place Jussieu<br/>
 75252 Paris Cedex 05<br/>
