--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <center>
         <h1>Josu&eacute; Tonelli&#8209;Cueto</h1>
         <h2>Mathematician</h2>
-        <h3>Postdoctoral Researcher at the <a href="https://team.inria.fr/ouragan/">OURAGAN team</a><br/>in <a href="https://www.inria.fr/fr/centre-inria-de-paris">Inria Paris</a> and <a href="https://www.imj-prg.fr/">IMJ-PRG</a></h3>
+        <h3><a href="https://www.sciencesmaths-paris.fr/en/post-doctoral-laureats-298.htm">FSMP Postdoctoral Fellow</a> at the <a href="https://team.inria.fr/ouragan/">OURAGAN team</a><br/>in <a href="https://www.inria.fr/fr/centre-inria-de-paris">Inria Paris</a> and <a href="https://www.imj-prg.fr/">IMJ-PRG</a></h3>
         <!--<h3><a href=""></a></h3>-->
         </center>
         <div class="row" align="center" style="padding-top:3vw;font-size:2vw;">
