--- a/index_es.html
+++ b/index_es.html
@@ -96,7 +96,7 @@
         <center>
         <h1>Josu&eacute; Tonelli Cueto</h1>
         <h2>Matemático</h2>
-        <h3>Investigador postdoctoral en el <a href="https://team.inria.fr/ouragan/">equipo OURAGAN</a><br/>en <a href="https://www.inria.fr/fr/centre-inria-de-paris">Inria Paris</a> e <a href="https://www.imj-prg.fr/">IMJ-PRG</a></h3>
+        <h3><a href="https://www.sciencesmaths-paris.fr/en/post-doctoral-laureats-298.htm">Reclutado Postdoctoral de la FSMP</a> en el <a href="https://team.inria.fr/ouragan/">equipo OURAGAN</a><br/>en <a href="https://www.inria.fr/fr/centre-inria-de-paris">Inria Paris</a> e <a href="https://www.imj-prg.fr/">IMJ-PRG</a></h3>
         <!--<h3><a href=""></a></h3>-->
         </center>
         <div class="row" align="center" style="padding-top:3vw;font-size:2vw;">
