--- a/pikasle_eus.html
+++ b/pikasle_eus.html
@@ -665,7 +665,7 @@ Ricardo, Josué eta Esther Domínguez,<br/>orduan ZTF-FCTko dekanoa zena,<br/>UP
 </div>
 <div class="col-md-4" style="text-align:center;padding-top: 3%;">
 <img style="width:90%;" src="pikasle/premio1.jpg" alt="PIkasle-ren taldearen zati bat UPV/EHUren irudia zabaltzen lagundu duten ikasleak sarien banaketan"/>
-<p style="margin:0;">Parte del equipo de $\pi kasle$ren taldearen zati bat<br/>UPV/EHUren sari-banaketan
+<p style="margin:0;">$\pi kasle$ren taldearen zati bat<br/>UPV/EHUren sari-banaketan
 </p></div>
 <div class="col-md-4" style="text-align:center;padding-top: 9%;">
 <img style="width:90%;" src="pikasle/premio2.JPG" alt="Josué Tonelli Cueto PIkasle-ren saria jasotzen XIV Ciencia en Acción-ren sari-banaketan"/>
