--- a/pikasle_es.html
+++ b/pikasle_es.html
@@ -523,11 +523,11 @@ El evento fue organizado por Josué Tonelli Cueto y fue realizado el siguiente e
 <div class="col-md-2" style="text-align:center;padding-top: 3%;"></div>
 <div class="col-md-4" style="text-align:center;padding-top: 3%;">
 <img style="width:90%;" src="pikasle/gardner00.jpg" alt="Poster de la PIkasle's Martin Gardner Celebration of Mind"/>
-<p style="margin:0;">Poster of<br/><em>$\pi$kasle's Martin Gardner Celebration of Mind</em>
+<p style="margin:0;">Poster de la<br/><em>$\pi$kasle's Martin Gardner Celebration of Mind</em>
 </p></div>
 <div class="col-md-4" style="text-align:center;padding-top: 4.5%;">
 <img style="width:90%;" src="pikasle/gardner01.png" alt="Logo de la PIkasle's Martin Gardner Celebration of Mind"/>
-<p style="margin:0;">Logo of<br/><em>$\pi$kasle's Martin Gardner Celebration of Mind</em>
+<p style="margin:0;">Logo de la<br/><em>$\pi$kasle's Martin Gardner Celebration of Mind</em>
 </p></div>
 <div class="col-md-2" style="text-align:center;padding-top: 3%;"></div>
 </div>
