--- a/pikasle_eus.html
+++ b/pikasle_eus.html
@@ -526,11 +526,11 @@ El evento fue organizado por Josué Tonelli Cueto y fue realizado el siguiente e
 <div class="col-md-2" style="text-align:center;padding-top: 3%;"></div>
 <div class="col-md-4" style="text-align:center;padding-top: 3%;">
 <img style="width:90%;" src="pikasle/gardner00.jpg" alt="PIkasle's Martin Gardner Celebration of Mind-en posterra"/>
-<p style="margin:0;">Poster of<br/><em>$\pi$kasle's Martin Gardner Celebration of Mind</em>
+<p style="margin:0;"><em>$\pi$kasle's Martin Gardner Celebration of Mind</em>-en<br/>posterra
 </p></div>
 <div class="col-md-4" style="text-align:center;padding-top: 4.5%;">
 <img style="width:90%;" src="pikasle/gardner01.png" alt="PIkasle's Martin Gardner Celebration of Mind-en logoa"/>
-<p style="margin:0;">Logo of<br/><em>$\pi$kasle's Martin Gardner Celebration of Mind</em>
+<p style="margin:0;"><em>$\pi$kasle's Martin Gardner Celebration of Mind</em>-en<br/>logoa
 </p></div>
 <div class="col-md-2" style="text-align:center;padding-top: 3%;"></div>
 </div>
