Tiburtius Prize and MCA 2021 update

--- a/cv.html
+++ b/cv.html
@@ -164,6 +164,7 @@
         <div class="property">Doctoral supervisors:</div><div class="value"> <a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algebra_zahlentheorie/v_menue/people/prof_dr_peter_buergisser/">Peter Bürgisser</a></div>
         <div class="property"></div><div class="value"><a href="https://www6.cityu.edu.hk/ma/people/profile/cuckerf.htm">Felipe Cucker</a></div>
         <div class="property">Grade:</div><div class="value"><i>mit Auszeichnung bestanden</i> (summa cum laude)<a href="#grades">*</a></div>
+        <div class="property">Recognitions:</div><div class="value"><a href="#tiburtius2020">3rd Prize in the <em>Tiburtius Prizes 2020 of the Berlin Universities</em></a></div>
         <div class="property">Institution:</div><div class="value"><a href="https://www.math-berlin.de/">Berlin Mathematical School (BMS)</a></div>
         <div class="property"></div><div class="value"><a href="https://www.tu-berlin.de/menue/home/parameter/en/">Technische Universit&auml;t Berlin</a></div>
         <div class="property">Duration:</div><div class="value">January 2017 - November 2019</div>
@@ -282,6 +283,22 @@
       <br/><div class="row"><div class="col-md-12">
       <h3>Awards</h3>
       </div></div>
+
+      <!-- 2020
+         YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
+
+         <span id="tiburtius2020"></span>
+         <br/><div class="cv">
+         <div class="year">
+         <h4>2020</h4>
+         </div><div class="title">
+         <h4>&emsp;3. Preis im <a href="https://www.fu-berlin.de/sites/drs/phd/money/awards/tiburtius.html"><em>Tiburtius-Preis 2020 - Preis der Berliner Hochschulen</em></a><span style="float:right;"><a href="https://www.fu-berlin.de/sites/drs/phd/money/awards/Tiburtius-Preis-2020-Liste-der-Preistraeger.pdf">Jury's Decision</a></span></h4></div>
+         <div class="year"></div><div class="title">
+         <h4>&ensp;&emsp;<em>(3rd Prize in the <em>Tiburtius Prizes 2020 of the Berlin Universities</em>)</em></h4></div>
+           <div class="property">Reason:</div><div class="value">Doctoral thesis</div>
+           <div class="property">Awarding institution:</div><div class="value"><a href="https://www.lkrp-berlin.de/index.html">State Conference of Rectors and Presidents of Berlin Universities (LKRP)</a></div>
+           <div class="property">Date:</div><div class="value">October of 2020</div>
+         </div>
 
       <!-- 2019
          YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
@@ -518,7 +535,7 @@
          <br/><div class="cv">
          <div class="year"><h4>2020</h4></div><div class="title"><h4>&emsp;<a href="#ISSAC2020">45th International Symposium on Symbolic and Algebraic Computations (ISSAC'20)</a></h4></div>
            <div class="pretalktitle"></div><div class="talktitle">Condition Numbers for the Cube. I: Univariate Polynomials and Hypersurfaces<span style="float:right;"><a href="pdf/ISSAC20_slides.pdf">Slides</a> / <a href="https://www.youtube.com/watch?v=OmXZw7ZbCsA">Video</a></span></div>
-           <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">(On-line talk due to the COVID-19 pandemic)</div>
+           <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">(On-line talk due to the COVID-19)</div>
          </div>
 
          <br/><div class="cv">
@@ -757,6 +774,24 @@
    <h2 class="display-4">Organized activities</h2>
    </div></div>
 
+   <!-- 2021
+   YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
+
+   <span id="MCA2021Session"></span>
+    <br/><div class="cv">
+    <div class="year">
+    <h4>2021</h4>
+    </div><div class="title">
+    <h4>&emsp;<a href="http://www.mca2021.org/en/special-sessions/item/26-symbolic-and-numerical-computation-with-polynomials">Special Session <em>Symbolic and Numerical Computation with Polynomials</em></a></h4></div>
+    <div class="year"></div><div class="title">
+    <h4>&#160;&#160;in the <a href="#MCA2021">Mathematical Congress of the Americas 2021</a></h4></div>
+    <div class="pretalktitle"></div><div class="talktitle">Co-organizer</div>
+      <div class="property">Description:</div><div class="value">23 talks in 12 hours (tentative)</div>
+      <div class="property">Organizer:</div><div class="value">Diego Armentano, Matías Bender, Alperen A. Erg&uuml;r and Josu&eacute; Tonelli-Cueto</div>
+      <div class="property">Location:</div><div class="value">Buenos Aires, Argentina (On-line due to COVID-19)</div>
+      <div class="property">Date:</div><div class="value">del 19 al 24 de julio del 2021</div>
+    </div>
+
    <!-- 2020
    YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
@@ -766,7 +801,7 @@
    </div><div class="title">
    <h4>&emsp;<a href="#3rdBYMAT">3rd BYMAT Conference</a></h4></div>
    <div class="pretalktitle"></div><div class="talktitle">Member of the Scientific Committee</div>
-     <div class="property">Location:</div><div class="value">Valencia, Spain (On-line)</div>
+     <div class="property">Location:</div><div class="value">Valencia, Spain (On-line due to COVID-19)</div>
      <div class="property">Date:</div><div class="value">1st to 3rd of December of 2020</div>
    </div>
 
@@ -1206,6 +1241,18 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 <!-- To come
 YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
+<span id="MCA2021"></span>
+<br/><div class="cv">
+<div class="year">
+<h4>2021</h4>
+</div><div class="title">
+<h4>&emsp;<a href="http://www.mca2021.org/en/">Mathematical Congress of the Americas 2021</a></h4></div>
+  <div class="property">Organizer:</div><div class="value"><a href="http://www.mcofamericas.org/">Mathematical Council of the Americas (MCofA)</a></div>
+  <div class="property">Hosting Institution:</div><div class="value"><a href="http://www.uba.ar/">University of Buenaos Aires</a></div>
+  <div class="property">Location:</div><div class="value">Buenos Aires, Argentina (On-line due to COVID-19)</div>
+  <div class="property">Date:</div><div class="value">19th to 24th of July of 2021</div>
+</div>
+
 <span id="3rdBYMAT"></span>
 <br/><div class="cv">
 <div class="year">
@@ -1215,7 +1262,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
   <div class="property">Organizer:</div><div class="value">Ana Navarro Quiles, Eva Primo Tárraga, Clara Burgos Simón, David Martínez Rodríguez, Elena López Navarro, Alberto Espuny Díaz, Miguel Reula Martín, José Alberto Conejero Casares and Patricio Almirón Cuadros</div>
   <div class="property">Hosting Institution:</div><div class="value"><a href="https://www.uv.es/">Universitat de València</a></div>
   <div class="property"></div><div class="value"><a href="https://www.upv.es/">Universitat Politècnica de València</a></div>
-  <div class="property">Location:</div><div class="value">Valencia, Spain (On-line)</div>
+  <div class="property">Location:</div><div class="value">Valencia, Spain (On-line due to COVID-19)</div>
   <div class="property">Date:</div><div class="value">1st to 3rd of December of 2020</div>
 </div>
 
@@ -1231,7 +1278,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
   <div class="property">Organizer:</div><div class="value">Timo Berthold and Thorsten Koch</div>
   <div class="property">Hosting Institution:</div><div class="value"><a href="https://www.tu-berlin.de/menue/home/">Technische Universit&auml;t Berlin</a></div>
   <div class="property"></div><div class="value"><a href="https://www.zib.de/">Zuse Institut Berlin</a></div>
-  <div class="property">Location:</div><div class="value">Berlin, Germany (On-line)</div>
+  <div class="property">Location:</div><div class="value">Berlin, Germany (On-line due to COVID-19)</div>
   <div class="property">Date:</div><div class="value">14th to 25th of September of 2020</div>
 </div>
 
@@ -1250,9 +1297,8 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
   <div class="property"></div><div class="value">Wen-Shin Lee (Tutorial Chair)</div>
   <div class="property"></div><div class="value">Jonathan Hauenstein (Software Presentations Chair)</div>
   <div class="property"></div><div class="value">J. Maurice Rojas (Poster Chair)</div></div>
-  <div class="property">Location:</div><div class="value">Kalamata, Greece</div>
+  <div class="property">Location:</div><div class="value">Kalamata, Greece (On-line due to COVID-19)</div>
   <div class="property">Date:</div><div class="value">20th to 23rd of July of 2020</div>
-  <div class="property">Note:</div><div class="value">On-line due to the COVID-19 pandemic</div>
 </div>
 
 <span id="milestoneseinstein2020"></span>
