--- a/cv_es.html
+++ b/cv_es.html
@@ -166,6 +166,7 @@
         <div class="property">Supervisores doctorales:</div><div class="value"> <a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algebra_zahlentheorie/v_menue/people/prof_dr_peter_buergisser/">Peter Bürgisser</a></div>
         <div class="property"></div><div class="value"><a href="https://www6.cityu.edu.hk/ma/people/profile/cuckerf.htm">Felipe Cucker</a></div>
         <div class="property">Nota:</div><div class="value"><i>mit Auszeichnung bestanden</i> (summa cum laude)<a href="#grades">*</a></div>
+        <div class="property">Reconocimientos:</div><div class="value"><a href="#tiburtius2020">3º Premio en los <em>Premios Tiburtius 2020 de las Universidades de Berlin</em></a></div>
         <div class="property">Institución:</div><div class="value"><a href="https://www.math-berlin.de/">Berlin Mathematical School (BMS)</a></div>
         <div class="property"></div><div class="value"><a href="https://www.tu-berlin.de/menue/home/parameter/en/">Technische Universit&auml;t Berlin</a></div>
         <div class="property">Duración:</div><div class="value">enero del 2017 - noviembre del 2019</div>
@@ -276,12 +277,28 @@
         <div class="property">Duración:</div><div class="value">julio y septiembre del 2013</div>
       </div>
 
-      <!-- Scholarships
+      <!-- Premios
          ================================================== -->
 
       <br/><div class="row"><div class="col-md-12">
       <h3>Premios</h3>
       </div></div>
+
+      <!-- 2020
+         YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
+
+      <span id="tiburtius2020"></span>
+      <br/><div class="cv">
+      <div class="year">
+      <h4>2020</h4>
+      </div><div class="title">
+      <h4>&emsp;3. Preis im <a href="https://www.fu-berlin.de/sites/drs/phd/money/awards/tiburtius.html"><em>Tiburtius-Preis 2020 - Preis der Berliner Hochschulen</em></a><span style="float:right;"><a href="https://www.fu-berlin.de/sites/drs/phd/money/awards/Tiburtius-Preis-2020-Liste-der-Preistraeger.pdf">Fallo</a></span></h4></div>
+      <div class="year"></div><div class="title">
+      <h4>&ensp;&emsp;<em>(3º Premio en los <em>Premios Tiburtius 2020 de las Universidades de Berlín</em>)</em></h4></div>
+        <div class="property">Razón:</div><div class="value">Tesis doctoral</div>
+        <div class="property">Institución dadora:</div><div class="value"><a href="https://www.lkrp-berlin.de/index.html">Conferencia Estatal de Rectores y Presidentes de las Universidades de Berlín (LKRP)</a></div>
+        <div class="property">Fecha:</div><div class="value">octubre de 2020</div>
+      </div>
 
       <!-- 2019
          YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
@@ -502,7 +519,7 @@
          <br/><div class="cv">
          <div class="year"><h4>2020</h4></div><div class="title"><h4>&emsp;<a href="#ISSAC2020">45th International Symposium on Symbolic and Algebraic Computations (ISSAC'20)</a></h4></div>
            <div class="pretalktitle"></div><div class="talktitle">Condition Numbers for the Cube. I: Univariate Polynomials and Hypersurfaces<span style="float:right;"><a href="pdf/ISSAC20_slides.pdf">Diapositivas</a> / <a href="https://www.youtube.com/watch?v=OmXZw7ZbCsA">Vídeo</a></span></div>
-           <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">(Ponencia on-line por la pandemia del COVID-19)</div>
+           <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">(Ponencia on-line por el COVID-19)</div>
          </div>
 
          <br/><div class="cv">
@@ -738,6 +755,26 @@
    <h2 class="display-4">Actividades organizadas</h2>
    </div></div>
 
+   <!-- 2021
+   YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
+
+   <span id="MCA2021Session"></span>
+    <br/><div class="cv">
+    <div class="year">
+    <h4>2021</h4>
+    </div><div class="title">
+    <h4>&emsp;<a href="http://www.mca2021.org/en/special-sessions/item/26-symbolic-and-numerical-computation-with-polynomials">Special Session <em>Symbolic and Numerical Computation with Polynomials</em></a></h4></div>
+    <div class="year"></div><div class="title">
+    <h4 style="font-size:1.2em;">&ensp;&emsp;<em>(Sesión Espcial <em>Computación Simbólica y Numérica con Polinomios</em>)</em></h4></div>
+    <div class="year"></div><div class="title">
+    <h4>&#160;&#160;en el <a href="#MCA2021">Mathematical Congress of the Americas 2021</a></h4></div>
+    <div class="pretalktitle"></div><div class="talktitle">Co-organizador</div>
+      <div class="property">Descripción:</div><div class="value">23 charlas en 12 horas (tentativa)</div>
+      <div class="property">Organizador:</div><div class="value">Diego Armentano, Matías Bender, Alperen A. Erg&uuml;r y Josu&eacute; Tonelli-Cueto</div>
+      <div class="property">Lugar:</div><div class="value">Buenos Aires, Argentina (On-line por el COVID-19)</div>
+      <div class="property">Fecha:</div><div class="value">del 19 al 24 de julio del 2021</div>
+    </div>
+
    <!-- 2020
    YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
@@ -747,7 +784,7 @@
    </div><div class="title">
    <h4>&emsp;<a href="#3rdBYMAT">3rd BYMAT Conference</a></h4></div>
    <div class="pretalktitle"></div><div class="talktitle">Miembro del Comité Científico</div>
-     <div class="property">Location:</div><div class="value">Valencia, España (On-line)</div>
+     <div class="property">Location:</div><div class="value">Valencia, España (On-line por el COVID-19)</div>
      <div class="property">Date:</div><div class="value">del 1 al 3 de diciembre del 2020</div>
    </div>
 
@@ -765,7 +802,7 @@
    <div class="pretalktitle"></div><div class="talktitle">Co-organizador, diseñador web y coordinación de los vídeos</div>
      <div class="property">Descripción:</div><div class="value">Seminario organizado por estudiantes donde se una nueva idea, concepto u objeto se introduce en cada sesión</div>
      <div class="property">Institución:</div><div class="value"><a href="https://www.math-berlin.de/">Berlin Mathematical School (BMS)</a></div>
-     <div class="property">Fecha:</div><div class="value">De abril del 2016 a diciembre del 2019</div>
+     <div class="property">Fecha:</div><div class="value">de abril del 2016 a diciembre del 2019</div>
    </div>
 
 
@@ -795,7 +832,7 @@
      <div class="property">Descripción:</div><div class="value">4 sesiones y 15 charlas</div>
      <div class="property">Organizador:</div><div class="value">Alperen A. Erg&uuml;r, Pierre Lairez, Gregorio Malajovich y Josu&eacute; Tonelli-Cueto</div>
      <div class="property">Lugar:</div><div class="value">Bern, Suiza</div>
-     <div class="property">Fecha:</div><div class="value">Del 9 al 13 de julio del 2019</div>
+     <div class="property">Fecha:</div><div class="value">del 9 al 13 de julio del 2019</div>
    </div>
 
 <!-- 2018
@@ -1203,6 +1240,20 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 <!-- To come
 YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
+<span id="MCA2021"></span>
+<br/><div class="cv">
+<div class="year">
+<h4>2021</h4>
+</div><div class="title">
+<h4>&emsp;<a href="http://www.mca2021.org/en/">Mathematical Congress of the Americas 2021</a></h4></div>
+<div class="year"></div><div class="title">
+<h4>&ensp;&emsp;<em>(Congreso Matemático de las Américas 2021)</em></h4></div>
+  <div class="property">Organizador:</div><div class="value"><a href="http://www.mcofamericas.org/">Mathematical Council of the Americas (MCofA)</a></div>
+  <div class="property">Institución anfitriona:</div><div class="value"><a href="http://www.uba.ar/">Universidad de Buenaos Aires</a></div>
+  <div class="property">Lugar:</div><div class="value">Buenos Aires, Argentina (On-line por el COVID-19)</div>
+  <div class="property">Fecha:</div><div class="value">del 19 al 24 de julio del 2021</div>
+</div>
+
 <span id="3rdBYMAT"></span>
 <br/><div class="cv">
 <div class="year">
@@ -1214,7 +1265,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
   <div class="property">Organizador:</div><div class="value">Ana Navarro Quiles, Eva Primo Tárraga, Clara Burgos Simón, David Martínez Rodríguez, Elena López Navarro, Alberto Espuny Díaz, Miguel Reula Martín, José Alberto Conejero Casares y Patricio Almirón Cuadros</div>
   <div class="property">Institución anfitriona:</div><div class="value"><a href="https://www.uv.es/">Universitat de València</a></div>
   <div class="property"></div><div class="value"><a href="https://www.upv.es/">Universitat Politècnica de València</a></div>
-  <div class="property">Lugar:</div><div class="value">Valencia, España (On-line)</div>
+  <div class="property">Lugar:</div><div class="value">Valencia, España (On-line por el COVID-19)</div>
   <div class="property">Fecha:</div><div class="value">del 1 al 3 de diciembre del 2020</div>
 </div>
 
@@ -1230,7 +1281,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
   <div class="property">Organizador:</div><div class="value">Timo Berthold and Thorsten Koch</div>
   <div class="property">Institución anfitriona:</div><div class="value"><a href="https://www.tu-berlin.de/menue/home/">Technische Universit&auml;t Berlin</a></div>
   <div class="property"></div><div class="value"><a href="https://www.zib.de/">Zuse Institut Berlin</a></div>
-  <div class="property">Lugar:</div><div class="value">Berlin, Germany (On-line)</div>
+  <div class="property">Lugar:</div><div class="value">Berlin, Germany (On-line por el COVID-19)</div>
   <div class="property">Fecha:</div><div class="value">del 14 al 25 de septiembre del 2020</div>
 </div>
 
@@ -1251,9 +1302,8 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
   <div class="property"></div><div class="value">Wen-Shin Lee (Tutorial Chair)</div>
   <div class="property"></div><div class="value">Jonathan Hauenstein (Software Presentations Chair)</div>
   <div class="property"></div><div class="value">J. Maurice Rojas (Poster Chair)</div></div>
-  <div class="property">Lugar:</div><div class="value">Kalamata, Grecia</div>
+  <div class="property">Lugar:</div><div class="value">Kalamata, Grecia (On-line por el COVID-19)</div>
   <div class="property">Fecha:</div><div class="value">del 20 al 23 de julio del 2020</div>
-  <div class="property">Nota:</div><div class="value">On-line por la pandemia del COVID-19</div>
 </div>
 
 
