--- a/doctoralthesis_es.html
+++ b/doctoralthesis_es.html
@@ -103,6 +103,8 @@
   </p>
   </center>
   <hr>
+  <p style="text-align:center;">Obtuvo el <a href="https://www.fu-berlin.de/sites/drs/phd/money/awards/Tiburtius-Preis-2020-Liste-der-Preistraeger.pdf"><em>3º Premio</em> para tesis doctorales en los <em>Premios Tiburtius 2020 de las Universidades de Berlín</em></a></p>
+  <hr>
   <div class="row" align="center">
   <div class="col" align="center">
   <a class="btn btn-phdtulink" href="http://dx.doi.org/10.14279/depositonce-9453" role="button" style="width:70%;">Tesis publicada en el Repositorio DepositOnce (DOI 10.14279/depositonce-9453)</a>
@@ -303,13 +305,22 @@
   </div>
   </div>
   <h3>
-    Publicación de la tesis (30 de diciembre del 2019)
+  Publicación de la tesis (30 de diciembre del 2019)
   </h3>
   <p>
   Para obtener el certificado de doctor, se debe preparar la versión final de la tesis (genehmigte Dissertation) y publicarla. La opción elegida para ello ha sido el <a href="https://depositonce.tu-berlin.de/">Repositorio DepositOnce de la Technische Universität Berlin</a>, que permite publicar la tesis entregando una versión digital, en formato PDF format, y depositando una copia impresa en la biblioteca universitaria. La versión final de la tesis fue publicada el 30 de diciembre del 2019.
   </p>
   <p>
   Para la versión final, se realizaron varios cambios. Sin embargo, todos ellos fueron cambios menores y ningún resultado de la tesis se vio afectado. El mayor cambio ocurrió en la fuente para matemáticas usada en el documento, la cual fue substituida por una nueva que encajaba mejor con la fuente elegida para el texto en el documento. Para mantener el registro, la versión entregada (o leída) de la tesis aun se puede descargar en <span><a href="thesis/vorgelegteDissertation_TonelliCueto.pdf">este enlace</a></span>.
+  </p>
+  <h3>
+  <em>3º Premio</em> en los <em>Premios Tiburtius 2020 de las Universidades de Berlín</em>
+  </h3>
+  <p>
+  Esta tesis obtuvo el <em>3º Premio</em> para tesis doctorales en los <em>Premios Tiburtius 2020 de las Universidades de Berlín</em>. El fallo del premio puede leerse en <span><a href="https://www.fu-berlin.de/sites/drs/phd/money/awards/Tiburtius-Preis-2020-Liste-der-Preistraeger.pdf">este enlace</a></span>. La tesis fue nominada al premio por Peter Bürgisser.
+  </p>
+  <p>
+  Los <a href="https://www.fu-berlin.de/sites/drs/phd/money/awards/tiburtius.html"><em>Premios Tiburtius de las Universidades de Berlín</em> (<em>Tiburtius-Preis - Preis der Berliner Hochschulen</em>, en alemán)</a> son otorgados cada año por la <a href="https://www.lkrp-berlin.de/index.html">Conferencia Estatal de Rectores y Presidentes de las Universidades de Berlín (LKRP)</a>. Estos premios consisten en tres premios (1º, 2º y 3º) y tres accésits para tesis doctorales defendidas el año anterior en una de las universidades de Berlín, y en tres premios (1º, 2º y 3º) para tesis de Máster presentadas el año anterior en una de las <a href="https://es.wikipedia.org/wiki/Fachhochschule">Fachhochschules (universidades de ciencias aplicadas)</a> de Berlín. Para ser considarada para los Premios Tiburtius, la tesis ha debido obtener la nota más alta y debe ser nominada por uno de les profesores de las universidades de Berlín.
   </p>
   <hr>
   <p>
