--- a/doctoralthesis.html
+++ b/doctoralthesis.html
@@ -99,6 +99,8 @@
   </h1>
   </center>
   <hr>
+  <p style="text-align:center;">Awarded the <a href="https://www.fu-berlin.de/sites/drs/phd/money/awards/Tiburtius-Preis-2020-Liste-der-Preistraeger.pdf"><em>3rd Prize</em> for doctoral theses in the <em>Tiburtius Prizes 2020 of the Berlin Universities</em></a></p>
+  <hr>
   <div class="row" align="center">
   <div class="col" align="center">
   <a class="btn btn-phdtulink" href="http://dx.doi.org/10.14279/depositonce-9453" role="button" style="width:70%;">Published Thesis at the DepositOnce Repository (DOI 10.14279/depositonce-9453)</a>
@@ -306,6 +308,15 @@
   </p>
   <p>
   For the final version, several changes were made. However, all these changes were minor, and no result of the thesis was affected. The biggest change occurred in the used mathematics-font of the document, which was substituted by a new one matching better the chosen text-font of the document. To keep the record, the handed version of the thesis (vorgelegte Dissertation) can be downloaded at <span><a href="thesis/vorgelegteDissertation_TonelliCueto.pdf">this link</a></span>.
+  </p>
+  <h3>
+  <em>3rd Prize</em> in the <em>Tiburtius Prizes 2020 of the Berlin Universities</em>
+  </h3>
+  <p>
+  The thesis obtained the <em>3rd Prize</em> for doctoral theses in the <em>Tiburtius Prizes 2020 of the Berlin Universities</em>. The jury's decision on the prize can be seen at <span><a href="https://www.fu-berlin.de/sites/drs/phd/money/awards/Tiburtius-Preis-2020-Liste-der-Preistraeger.pdf">this link</a></span>. The thesis was nominated for the prize by Peter Bürgisser.
+  </p>
+  <p>
+  The <a href="https://www.fu-berlin.de/sites/drs/phd/money/awards/tiburtius.html"><em>Tiburtius Prizes of the Berlin Universities</em> (<em>Tiburtius-Preis - Preis der Berliner Hochschulen</em>, in German)</a> are awarded each year by the <a href="https://www.lkrp-berlin.de/index.html">State Conference of Rectors and Presidents of Berlin Universities (LKRP)</a>. They consist on three prizes (1st, 2nd, and 3rd) and three recognition awards for doctoral theses defended the previous year at one of the Berlin universities, and on three prizes (1st, 2nd, and 3rd) for Master theses presented the previous year at one of the Berlin <a href="https://en.wikipedia.org/wiki/Fachhochschule">Fachhochschules (universities of applied sciences)</a>. To be considered for the Tiburtius Prizes, the thesis must have the highest possible grade and it should be nominated by one of the professors at the Berlin universities.
   </p>
   <hr>
   <p>
