--- a/doctoralthesis_es.html
+++ b/doctoralthesis_es.html
@@ -103,7 +103,7 @@
   </p>
   </center>
   <hr>
-  <p style="text-align:center;">Obtuvo el <a href="https://www.fu-berlin.de/sites/drs/phd/money/awards/Tiburtius-Preis-2020-Liste-der-Preistraeger.pdf"><em>3º Premio</em> para tesis doctorales en los <em>Premios Tiburtius 2020 de las Universidades de Berlín</em></a></p>
+  <p style="text-align:center;" id="tiburtius">Obtuvo el <a href="https://www.fu-berlin.de/sites/drs/phd/money/awards/Tiburtius-Preis-2020-Liste-der-Preistraeger.pdf"><em>3º Premio</em> para tesis doctorales en los <em>Premios Tiburtius 2020 de las Universidades de Berlín</em></a></p>
   <hr>
   <div class="row" align="center">
   <div class="col" align="center">
@@ -372,6 +372,8 @@
       x = document.getElementsByTagName("pre");
       x[0].style="font-size:0.5em;";
     document.getElementById("finalsentence").innerHTML="";
+    document.getElementById("tiburtius").innerHTML="<a href="https://www.fu-berlin.de/sites/drs/phd/money/awards/Tiburtius-Preis-2020-Liste-der-Preistraeger.pdf"><em>3º Premio</em><br/>en los<br/><em>Premios Tiburtius 2020<br/>de las<br/> Universidades de Berlín</em></a>";
+    document.getElementById("botonfotos").style="width:100%;font-size:1em;";
     }
     //-->
     </script>
