--- a/doctoralthesis.html
+++ b/doctoralthesis.html
@@ -99,7 +99,7 @@
   </h1>
   </center>
   <hr>
-  <p style="text-align:center;">Awarded the <a href="https://www.fu-berlin.de/sites/drs/phd/money/awards/Tiburtius-Preis-2020-Liste-der-Preistraeger.pdf"><em>3rd Prize</em> for doctoral theses in the <em>Tiburtius Prizes 2020 of the Berlin Universities</em></a></p>
+  <p style="text-align:center;" id="tiburtius">Awarded the <a href="https://www.fu-berlin.de/sites/drs/phd/money/awards/Tiburtius-Preis-2020-Liste-der-Preistraeger.pdf"><em>3rd Prize</em> for doctoral theses in the <em>Tiburtius Prizes 2020 of the Berlin Universities</em></a></p>
   <hr>
   <div class="row" align="center">
   <div class="col" align="center">
@@ -367,7 +367,9 @@
       x[2].class="col-md-12";
       x = document.getElementsByTagName("pre");
       x[0].style="font-size:0.5em;";
-    document.getElementById("finalsentence").innerHTML="";
+      document.getElementById("finalsentence").innerHTML="";
+      document.getElementById("tiburtius").innerHTML="<a href="https://www.fu-berlin.de/sites/drs/phd/money/awards/Tiburtius-Preis-2020-Liste-der-Preistraeger.pdf"><em>3rd Prize</em><br/>in the<br/><em>Tiburtius Prizes 2020<br/>of the<br/>Berlin Universities</em></a>";
+      document.getElementById("botonfotos").style="width:100%;font-size:1em;";
     }
     //-->
     </script>
