--- a/doctoralthesis.html
+++ b/doctoralthesis.html
@@ -223,7 +223,7 @@
   <p>
   After a successful defense, there was a small celebration with food and drinks in the Matheon Lounge (MA315) with friends and relatives.
   </p>
-  <p id="botonfotos" style="text-align:center;"><button class="btn-primary" style="width:40%;font-size:1.5em;" onclick="show(1901)">Show pictures of the afterdefence</button></p>
+  <p id="botonfotos" style="text-align:center;"><button class="btn-primary" style="width:40%;font-size:1.5em;" onclick="show(1901)" id="botonfotosB">Show pictures of the afterdefence</button></p>
   <div id="extrapictures" class="row" style="display:none;align-items: center;">
   <div class="row" style="display:flex;align-items: center;">
     <div class="col-md-4" style="padding-top:1em;text-align:center;">
@@ -369,7 +369,7 @@
       x[0].style="font-size:0.5em;";
       document.getElementById("finalsentence").innerHTML="";
       document.getElementById("tiburtius").innerHTML="<a href="https://www.fu-berlin.de/sites/drs/phd/money/awards/Tiburtius-Preis-2020-Liste-der-Preistraeger.pdf"><em>3rd Prize</em><br/>in the<br/><em>Tiburtius Prizes 2020<br/>of the<br/>Berlin Universities</em></a>";
-      document.getElementById("botonfotos").style="width:100%;font-size:1em;";
+      document.getElementById("botonfotosB").style="width:100%;font-size:1em;";
     }
     //-->
     </script>
