--- a/doctoralthesis_es.html
+++ b/doctoralthesis_es.html
@@ -227,7 +227,7 @@
   <p>
   Después de una defensa exitosa, hubo una pequeña celebración con comida y bebidas en el Matheon Lounge (MA315) con amigues y familiares.
   </p>
-  <p id="botonfotos" style="text-align:center;"><button class="btn-primary" style="width:40%;font-size:1.5em;" onclick="show(1901)">Mostrar fotos de la postdefensa</button></p>
+  <p id="botonfotos" style="text-align:center;"><button class="btn-primary" style="width:40%;font-size:1.5em;" onclick="show(1901)" id="botonfotosB">Mostrar fotos de la postdefensa</button></p>
   <div id="extrapictures" class="row" style="display:none;align-items: center;">
   <div class="row" style="display:flex;align-items: center;">
     <div class="col-md-4" style="padding-top:1em;text-align:center;">
@@ -373,7 +373,7 @@
       x[0].style="font-size:0.5em;";
     document.getElementById("finalsentence").innerHTML="";
     document.getElementById("tiburtius").innerHTML="<a href="https://www.fu-berlin.de/sites/drs/phd/money/awards/Tiburtius-Preis-2020-Liste-der-Preistraeger.pdf"><em>3º Premio</em><br/>en los<br/><em>Premios Tiburtius 2020<br/>de las<br/> Universidades de Berlín</em></a>";
-    document.getElementById("botonfotos").style="width:100%;font-size:1em;";
+    document.getElementById("botonfotosB").style="width:100%;font-size:1em;";
     }
     //-->
     </script>
