--- a/doctoralthesis.html
+++ b/doctoralthesis.html
@@ -368,7 +368,7 @@
       x = document.getElementsByTagName("pre");
       x[0].style="font-size:0.5em;";
       document.getElementById("finalsentence").innerHTML="";
-      document.getElementById("tiburtius").innerHTML="<a href="https://www.fu-berlin.de/sites/drs/phd/money/awards/Tiburtius-Preis-2020-Liste-der-Preistraeger.pdf"><em>3rd Prize</em><br/>in the<br/><em>Tiburtius Prizes 2020<br/>of the<br/>Berlin Universities</em></a>";
+      document.getElementById("tiburtius").innerHTML='<a href="https://www.fu-berlin.de/sites/drs/phd/money/awards/Tiburtius-Preis-2020-Liste-der-Preistraeger.pdf"><em>3rd Prize</em><br/>in the<br/><em>Tiburtius Prizes 2020<br/>of the<br/>Berlin Universities</em></a>';
       document.getElementById("botonfotosB").style="width:100%;font-size:1em;";
     }
     //-->
