--- a/doctoralthesis_es.html
+++ b/doctoralthesis_es.html
@@ -372,7 +372,7 @@
       x = document.getElementsByTagName("pre");
       x[0].style="font-size:0.5em;";
     document.getElementById("finalsentence").innerHTML="";
-    document.getElementById("tiburtius").innerHTML="<a href="https://www.fu-berlin.de/sites/drs/phd/money/awards/Tiburtius-Preis-2020-Liste-der-Preistraeger.pdf"><em>3º Premio</em><br/>en los<br/><em>Premios Tiburtius 2020<br/>de las<br/> Universidades de Berlín</em></a>";
+    document.getElementById("tiburtius").innerHTML='<a href="https://www.fu-berlin.de/sites/drs/phd/money/awards/Tiburtius-Preis-2020-Liste-der-Preistraeger.pdf"><em>3º Premio</em><br/>en los<br/><em>Premios Tiburtius 2020<br/>de las<br/> Universidades de Berlín</em></a>';
     document.getElementById("botonfotosB").style="width:100%;font-size:1em;";
     }
     //-->
