popmath in cv for phone

--- a/cv.html
+++ b/cv.html
@@ -935,7 +935,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
    ================================================== -->
 
       <div class="row"><div class="col-md-12">
-      <h2 class="display-4">Communication/Popularization of Mathematics</h2>
+      <h2 class="display-4" id="populartitle">Communication/Popularization of Mathematics</h2>
       </div></div>
 
     <!-- PopMath Projects
@@ -2242,6 +2242,8 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
      x[i].style="width:100%;";
     }
     document.getElementById("finalsentence").innerHTML="";
+    }
+    document.getElementById("populartitle").innerHTML="Popular Mathematics";
     }
     //-->
     </script>
