--- a/cv_es.html
+++ b/cv_es.html
@@ -503,7 +503,7 @@
    ================================================== -->
 
       <div class="row"><div class="col-md-12">
-      <h2 class="display-4">Charlas y otras presentaciones</h2>
+      <h2 class="display-4" id="charlastitle">Charlas y otras presentaciones</h2>
       </div></div>
 
 <!-- Conference presentation
@@ -2280,6 +2280,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
      x[i].style="width:100%;";
     }
     document.getElementById("finalsentence").innerHTML="";
+    document.getElementById("charlastitle").innerHTML="Charlas";
     }
     //-->
     </script>
