--- a/doctoralthesis.html
+++ b/doctoralthesis.html
@@ -362,9 +362,9 @@
       x[0].style="width:100%;";
       x[0].innerHTML="Published Thesis<br/>at the DepositOnce Repository<br/>(DOI 10.14279/depositonce-9453)";
       x = document.getElementsByClassName("col-md-4");
-      x[0].class="col-md-12";
-      x[1].class="col-md-12";
-      x[2].class="col-md-12";
+      for (i = 0; i < x.length; i++) {
+      x[i].class="col-md-12";
+      }
       x = document.getElementsByTagName("pre");
       x[0].style="font-size:0.5em;";
       document.getElementById("finalsentence").innerHTML="";
